changed java memory to 3GB